<resources>
    <string name="app_name">Hinder</string>

    <!-- Strings related to login and register -->
    <string name="title_activity_register">Register</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_age">Age</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">No account? Register here</string>
    <string name="action_register">Register</string>
    <string name="action_register_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to MenuActivity -->
    <string name="information_about_games">You will be playing three games: Math, Memory, and Color. Each game will iterate twice to obtain sufficient data, which is then analyzed to measure performance and progress.</string>
    <string name="title_activity_menu">Menu</string>
    <string name="menu_name">Menu</string>
    <string name="button_start">Start</string>
    <string name="button_progress">Progress</string>
    <string name="button_settings">User Settings</string>

    <!-- Strings related to SettingsActivity -->
    <string name="title_activity_settings">Settings</string>
    <string name="text_name">Name</string>
    <string name="edit_name"></string>
    <string name="text_username">Username</string>
    <string name="text_password">Password</string>
    <string name="text_age">Age</string>
    <string name="button_save">Save</string>

    <!-- Strings related to ProgressActivity -->
    <string name="title_activity_progress">Progress</string>

</resources>
