<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="hinder.hinder.SettingsActivity">

    <TextView android:id="@+id/text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_name"
        android:textSize="30sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"/>
    <EditText android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_toRightOf="@id/text_name"
        android:layout_alignParentTop="@id/text_name"
        android:textSize="30sp"/>

    <TextView android:id="@+id/text_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_username"
        android:layout_below="@id/text_name"
        android:textSize="30sp"
        android:layout_alignParentLeft="true"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_toRightOf="@id/text_username"
        android:layout_alignParentTop="@id/text_username"
        android:textSize="30sp"/>

    <TextView android:id="@+id/text_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_password"
        android:layout_below="@id/text_username"
        android:textSize="30sp"
        android:layout_alignParentLeft="true"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_toRightOf="@id/text_password"
        android:layout_alignParentTop="@id/text_password"
        android:textSize="30sp"/>

    <TextView android:id="@+id/text_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_age"
        android:layout_below="@id/text_password"
        android:textSize="30sp"
        android:layout_alignParentLeft="true"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_toRightOf="@id/text_age"
        android:layout_alignParentTop="@id/text_age"
        android:textSize="30sp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_save"
        android:textSize="30sp"
        android:layout_below="@id/text_age"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>
